<resources>
    <string name="app_name" translatable="false">Danser</string>
    <string name="hint_search">Search songs…</string>
    <string name="add_to_favorites">favorite</string>
    <string name="artist">Artist:</string>
    <string name="pick_account">You have to pick an account in order to export YouTube playlist.</string>
    <string name="not_online">Internet connection is required.</string>
    <string name="google_app_id" translatable="false">672064283419-35crplnl02bmsqogcm5q6vvkch0fnc30.apps.googleusercontent.com</string>
    <string name="youtube" translatable="false">YouTube</string>
    <string name="dance_category_ballroom">Ballroom</string>
    <string name="dance_category_latin">Latin</string>
    <string name="dance_category_club">Club</string>
    <string name="dance_category_folk">Folk</string>
    <string name="dance_category_jazz">Jazz</string>
    <string name="dance_category_miscellaneous">Miscellaneous</string>
    <string name="share_into">Recognize in Danser</string>
    <string name="regexp_soundhound">^I just used SoundHound to find (.*) by (.*)$</string>
    <string name="regexp_trackid">^I used TrackID™ to find (.*) by (.*)\\..*</string>
    <string name="spotify" translatable="false">Spotify</string>
    <string name="dance_label">Dance:</string>
    <string name="playlists">Playlists</string>
    <string name="releases_label">Release\u00A0count:</string>
    <string name="release_year">Release\u00A0year:</string>
    <string name="work_mbid_label">MBID</string>
    <string name="recordings_number">Number\u00A0of\u00A0recordings:</string>
    <string name="export_to_spotify">Export to Spotify</string>
    <string name="export_to_youtube">Export to YouTube</string>
    <string name="create_playlist">Create playlist</string>
    <string name="select_from">Select from:</string>
    <string name="choose_preset">Choose preset:</string>
    <string name="playlist_name">Playlist name:</string>
    <string name="generate_from_playlists">playlists</string>
    <string name="generate_from_presets">presets</string>
    <string name="no_detail">Tap song to display its details</string>
    <string name="no_data_available">No items were found</string>
    <string name="loading_data">Loading data…</string>
    <string name="browse">Browse</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="about">About</string>
    <string name="export">Export</string>
    <string name="include_songs_from_playlist">Include songs from playlist:</string>
    <string name="include_these_dances">Include these dances:</string>
    <string name="dance_order">Dance order:</string>
    <string name="order_alternate_slow_and_fast">alternate slow and fast</string>
    <string name="order_tempo_ascending">tempo ascending</string>
    <string name="order_tempo_descending">tempo descending</string>
    <string name="order_random">random</string>
    <string name="order_custom">custom (specify order)</string>
    <string name="playlist_length">Playlist length:</string>
    <string name="until_order_preserved">until dance order can be preserved</string>
    <string name="no_limit_all_tracks">no limit (all tracks)</string>
    <string name="and">and</string>
    <string name="or">or</string>
    <string name="maximum_number_of_tracks_of">maximum (number of tracks) of</string>
    <string name="track_order">Track order:</string>
    <string name="track_order_regular">regular (1 for each dance)</string>
    <string name="track_order_group">group by dance (all for each dance)</string>
    <string name="track_order_random">random (dance order ignored)</string>
    <string name="switch_to_advanced">Switch to advanced</string>
    <string name="delete_playlist">Delete</string>
    <string name="playlist_was_created">Playlist %s was created.</string>
    <string name="playlist_choose_name">Please choose a name for playlist.</string>
    <string name="playlist_already_exists">Please choose another name, this playlist already exists.</string>
    <string name="created_during_pv239">Created during\u00A0PV239 @\u00A0FI\u00A0MUNI</string>
    <string name="copyright" translatable="false">©2016 Pavel\u00A0Břoušek, Petr\u00A0Konečný</string>
    <string name="app_about">%s - about</string>
    <string name="copyright_images">Images by\u00A0ClkerFreeVectorImages and\u00A0OpenClipartVectors from\u00A0pixabay.com (public\u00A0domain)</string>
    <string name="song_added_to_favorites">Song added to favorites</string>
    <string name="available">Available</string>
    <string name="not_available">Not available</string>
    <string name="songs_for_query">%1$d songs for query \'%2$s\'</string>
    <string name="no_spotify_ids">No songs in your playlist have Spotify IDs.</string>
    <string name="unable_to_obtain_token">Unable to obtain token to create playlist.</string>
    <string name="playlist_generated_by">Playlist generated by %s</string>
    <string name="length_label">Length:</string>
    <string name="tempo_label">Tempo:</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="XminutesYseconds">%1$d m %2$d s</string>
    <string name="work_mbid_url" translatable="false">http://musicbrainz.org/otherlookup/mbid?other-lookup.mbid=%s</string>
    <string name="youtube_url" translatable="false">https://www.youtube.com/watch?v=%s</string>
    <string name="spotify_url" translatable="false">https://open.spotify.com/track/%s</string>

    <string-array name="generate_presets">
        <item>dancing lesson</item>
        <item>ballroom &amp; latin</item>
        <item>salsa, zouk &amp; similar</item>
    </string-array>
</resources>
