<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView android:layout_height="wrap_content"
            android:layout_width="match_parent" android:text="@string/include_songs_from_playlist" />
        <Spinner
            android:id="@+id/playlists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView android:layout_height="wrap_content"
            android:layout_width="match_parent" android:text="@string/include_these_dances" />
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/include_dances"
            android:columnCount="2"
            />

        <TextView android:layout_height="wrap_content"
            android:layout_width="match_parent" android:text="@string/dance_order" />
        <RadioGroup android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dance_order">
            <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/order_alternate_slow_and_fast"/>
            <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/order_tempo_ascending"/>
            <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/order_tempo_descending"/>
            <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/order_random"/>
            <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/order_custom" android:enabled="false"/>
        </RadioGroup>

        <TextView android:layout_height="wrap_content"
            android:layout_width="match_parent" android:text="@string/playlist_length" />
        <RadioGroup android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/playlist_length">
            <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/until_order_preserved"/>
            <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no_limit_all_tracks"/>
        </RadioGroup>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>

        <RadioGroup android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playlist_length_limit">
            <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/and"/>
            <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/or"/>
        </RadioGroup>
        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content" android:text="@string/maximum_number_of_tracks_of" />
        <EditText android:layout_height="wrap_content"
            android:layout_width="wrap_content" android:inputType="number" />

        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content" android:text="@string/track_order" />
        <RadioGroup android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/track_order">
            <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/track_order_regular"/>
            <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/track_order_group"/>
            <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/track_order_random"/>
        </RadioGroup>

        <!--<TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content" android:text="Output format:" />
        <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Create playlist in Danser" android:checked="true"/>
        <RadioGroup android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/output_format">
            <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="YouTube - create playlist"/>
            <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="YouTube - play in Danser"/>
            <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Spotify - create playlist"/>
            <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Spotify - play in Danser*"/>
            <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Show track list"/>
            <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Share track list (plain text)"/>
        </RadioGroup>-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/create_playlist"/>
    </LinearLayout>
</ScrollView>